ref: use record instead of lombok.