@@ -48,26 +48,27 @@ class TransportationServiceTest {
                 .to(to)
                 .operatingDays(Day.toByte(List.of(Day.MONDAY)))
                 .build();
+
         when(transportationRepository.findAll()).thenReturn(List.of(t));
 
         List<TransportationDto> result = transportationService.getTransportations();
 
         assertThat(result).hasSize(1);
-        assertThat(result.get(0).getId()).isEqualTo(10L);
-        assertThat(result.get(0).getType()).isEqualTo("FLIGHT");
-        assertThat(result.get(0).getFrom()).isEqualTo("A");
-        assertThat(result.get(0).getTo()).isEqualTo("B");
-        assertThat(result.get(0).getDays()).containsExactly("MONDAY");
+        assertThat(result.getFirst().id()).isEqualTo(10L);
+        assertThat(result.getFirst().type()).isEqualTo("FLIGHT");
+        assertThat(result.getFirst().from()).isEqualTo("A");
+        assertThat(result.getFirst().to()).isEqualTo("B");
+        assertThat(result.getFirst().days()).containsExactly("MONDAY");
     }
 
     @Test
     void saveTransportation_sameOriginAndDestination_throwsInvalidRequest() {
-        CreateTransportationDto dto = CreateTransportationDto.builder()
-                .fromId(1L)
-                .toId(1L)
-                .type(TransportationType.BUS)
-                .days(List.of("MONDAY"))
-                .build();
+        CreateTransportationDto dto = new CreateTransportationDto(
+                1L,
+                1L,
+                TransportationType.BUS,
+                List.of("MONDAY")
+        );
 
         assertThatThrownBy(() -> transportationService.saveTransportation(dto))
                 .isInstanceOf(InvalidRequest.class)
@@ -78,6 +79,7 @@ class TransportationServiceTest {
     void saveTransportation_persistsAndReturnsDto() {
         Location from = Location.builder().id(1L).name("X").build();
         Location to = Location.builder().id(2L).name("Y").build();
+
         when(locationService.findById(1L)).thenReturn(from);
         when(locationService.findById(2L)).thenReturn(to);
 
@@ -88,23 +90,25 @@ class TransportationServiceTest {
                 .to(to)
                 .operatingDays(Day.toByte(List.of(Day.TUESDAY)))
                 .build();
+
         when(transportationRepository.save(any(Transportation.class))).thenReturn(saved);
 
-        CreateTransportationDto dto = CreateTransportationDto.builder()
-                .fromId(1L)
-                .toId(2L)
-                .type(TransportationType.SUBWAY)
-                .days(List.of("TUESDAY"))
-                .build();
+        CreateTransportationDto dto = new CreateTransportationDto(
+                1L,
+                2L,
+                TransportationType.SUBWAY,
+                List.of("TUESDAY")
+        );
 
         TransportationDto result = transportationService.saveTransportation(dto);
 
-        assertThat(result.getId()).isEqualTo(7L);
-        assertThat(result.getType()).isEqualTo("SUBWAY");
-        assertThat(result.getDays()).containsExactly("TUESDAY");
+        assertThat(result.id()).isEqualTo(7L);
+        assertThat(result.type()).isEqualTo("SUBWAY");
+        assertThat(result.days()).containsExactly("TUESDAY");
 
         ArgumentCaptor<Transportation> captor = ArgumentCaptor.forClass(Transportation.class);
         verify(transportationRepository).save(captor.capture());
+
         assertThat(captor.getValue().getFrom()).isSameAs(from);
         assertThat(captor.getValue().getTo()).isSameAs(to);
         assertThat(captor.getValue().getType()).isEqualTo(TransportationType.SUBWAY);
@@ -114,6 +118,7 @@ class TransportationServiceTest {
     void updateTransportation_updatesFieldsAndReturnsDto() {
         Location from = Location.builder().id(1L).name("A").build();
         Location to = Location.builder().id(2L).name("B").build();
+
         Transportation existing = Transportation.builder()
                 .id(3L)
                 .type(TransportationType.BUS)
@@ -121,18 +126,20 @@ class TransportationServiceTest {
                 .to(to)
                 .operatingDays(Day.toByte(List.of(Day.MONDAY)))
                 .build();
+
         when(transportationRepository.findById(3L)).thenReturn(Optional.of(existing));
         when(transportationRepository.save(existing)).thenReturn(existing);
 
-        UpdateTransportationDto dto = UpdateTransportationDto.builder()
-                .type(TransportationType.UBER)
-                .days(List.of("FRIDAY", "SATURDAY"))
-                .build();
+        UpdateTransportationDto dto = new UpdateTransportationDto(
+                TransportationType.UBER,
+                List.of("FRIDAY", "SATURDAY")
+        );
 
         TransportationDto result = transportationService.updateTransportation(3L, dto);
 
-        assertThat(result.getType()).isEqualTo("UBER");
-        assertThat(result.getDays()).containsExactlyInAnyOrder("FRIDAY", "SATURDAY");
+        assertThat(result.type()).isEqualTo("UBER");
+        assertThat(result.days()).containsExactlyInAnyOrder("FRIDAY", "SATURDAY");
+
         verify(transportationRepository).save(existing);
     }
 
